--- a/Asissgment1/StyleSheet2.css
+++ b/Asissgment1/StyleSheet2.css
@@ -24,13 +24,13 @@ ul {
 }
 ul li {
     float: right;
-    gap: 10%;
+    gap: 50rem;
 }
 ul li item {
     display: block;
     color: white;
     text-align: center;
-    padding: 1.4% 5.5%%;
+    padding: 1.4rem 5.5rem;
     text-decoration: none;
     font-size: large;
 }
