--- a/Asissgment1/StyleSheet2.css
+++ b/Asissgment1/StyleSheet2.css
@@ -1,4 +1,5 @@
 ﻿body {
+    margin: 0;
 
 }
 h1 {
@@ -15,6 +16,7 @@ h1 {
 }
 
 ul {
+    width: 100%;
     display: flex;
     list-style-type: none;
     margin: 0;
@@ -30,7 +32,7 @@ ul li item {
     display: block;
     color: white;
     text-align: center;
-    padding: 1.4rem 5.5rem;
+    padding: 1.4rem 2.5rem;
     text-decoration: none;
     font-size: large;
 }
