--- a/Asissgment1/StyleSheet2.css
+++ b/Asissgment1/StyleSheet2.css
@@ -1,10 +1,11 @@
 ﻿body {
     margin: 0;
-
+    background-color: #fff0db;
 }
 
 .encapsulordiv {
-    margin: 15%;
+    margin: 5%;
+    
 }
 h1 {
     width: 50%;
@@ -36,26 +37,44 @@ ul {
     overflow: hidden;
     background-color: #333;
 }
+
+
 ul li {
     float: right;
     gap: 50rem;
+    margin-top: auto;
+    
 }
-ul li item {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 1.4rem 2.5rem;
-    text-decoration: none;
-    font-size: large;
+    ul li item {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 1.4rem 5rem;
+        text-decoration: none;
+        font-size: large;
+    }
+
+@media (max-width: 600px) {
+    ul li item {
+        padding: 1.4rem 2rem;
+        font-size: medium;
+    }
 }
+        ul li item img {
+            float: left;
+            width: 30%;
+            padding: 1.4rem 2.5rem;
+            opacity:0.35;
+        }
 
 .randomimgdiv {
     display: flex;
     justify-content: center;
     align-items: center;
-
-    border: 2px solid black;
+    background-color: #d9b99b;
 }
+
+
 
 
 .contaierdiv {
@@ -63,6 +82,7 @@ ul li item {
     gap: 5rem;
     overflow: auto;
     width 60%;
+    border: 2px solid black;
 }
 
 
@@ -74,20 +94,19 @@ ul li item {
     flex-direction: column;
     justify-content: center;
     padding: 1rem;
-    border: 2px solid green;
     display: flex;
     overflow: auto;
     height: auto;
+    background-color: #d0b9a8;
+    border: 2px solid black;
 }
 .gallerydiv {
     margin: 0;
     flex: 1;
     padding: 1rem;
-    border: 2px solid green;
     display: flex;
     justify-content: center;
-    
-    
+    background-color: #eed9c4;
 }
 
     .gallerydiv img {
@@ -98,11 +117,11 @@ ul li item {
     flex: 1;
     display: flex;
     padding: 1rem;
-    border: 2px solid green;
     justify-content: center;
     align-items: center;
     height: auto;
     overflow: hidden;
+    background-color: #eed9c4;
 }
 
 
@@ -117,6 +136,13 @@ ul li item {
     }
 }
 
-.galimg {
-
+.bottomdiv {
+    width: 100%;
+    height: 25%;
+    
 }
+    .bottomdiv img {
+        width: 100%;
+        height: auto;
+        opacity: 0.35;
+    }
