--- a/Asissgment1/StyleSheet2.css
+++ b/Asissgment1/StyleSheet2.css
@@ -1,24 +1,26 @@
 ﻿body {
     margin: 0;
-    background-color: #fff0db;
+    overflow-x: hidden;
+    background-color: #89CFF0;
 }
 
 .encapsulordiv {
-    margin: 5%;
-    
+    background-color: #6495ED;
 }
+
+.smallermargin {
+    background-color: #6495ED;
+    margin:5%;
+}
+
 h1 {
-    width: 50%;
-    margin: 0 auto;
     text-align: center;
-    padding: 5%;
+    padding: 3%;
 }
 
 h2 {
-    width: 50%;
-    margin: 0 auto;
     text-align: center;
-    padding: 5%;
+    margin-top: 15%;
 }
 .left {
     float: left;
@@ -34,7 +36,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: visible;
     background-color: #333;
 }
 
@@ -67,12 +69,21 @@ ul li {
             opacity:0.35;
         }
 
+
+
 .randomimgdiv {
     display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: #d9b99b;
+    align-content: center;
+    padding: 5%;
 }
+
+    .randomimgdiv img {
+        height: 25%;
+        width: 100%;
+        padding: 2rem;
+        
+    }
 
 
 
@@ -80,9 +91,8 @@ ul li {
 .contaierdiv {
     display: flex;
     gap: 5rem;
-    overflow: auto;
+    overflow: hidden;
     width 60%;
-    border: 2px solid black;
 }
 
 
@@ -107,6 +117,7 @@ ul li {
     display: flex;
     justify-content: center;
     background-color: #eed9c4;
+   
 }
 
     .gallerydiv img {
@@ -120,6 +131,7 @@ ul li {
     justify-content: center;
     align-items: center;
     height: auto;
+    width: contain;
     overflow: hidden;
     background-color: #eed9c4;
 }
@@ -145,4 +157,22 @@ ul li {
         width: 100%;
         height: auto;
         opacity: 0.35;
+        position: absolute;
     }
+
+section {
+    display: flex;
+    justify-content: left;
+    position: relative;
+}
+iframe {
+    margin: 5%;
+}
+
+.divider {
+    width: 130vw;
+    height: auto;
+    position: absolute;
+    display: flex;
+    
+}
