--- a/Asissgment1/StyleSheet2.css
+++ b/Asissgment1/StyleSheet2.css
@@ -56,6 +56,7 @@ h2 {
 
 .navbutton {
     border: none;
+    background-color: none;
     color: black;
     font-family: 'Playfair Display', sans-serif;
     padding: 2rem 2rem;
