figured out how to use grid

--- a/Asissgment1/StyleSheet2.css
+++ b/Asissgment1/StyleSheet2.css
@@ -1,4 +1,6 @@
-﻿body {
+﻿@import url('StyleSheet3.css');
+
+body {
     margin: 0;
     overflow-x: hidden;
     background-color: #89CFF0;
@@ -227,3 +229,4 @@ hr.dashedbottom {
     border-radius: 5px;
     margin: 0%;
 }
+
