--- a/Asissgment1/StyleSheet3.css
+++ b/Asissgment1/StyleSheet3.css
@@ -6,20 +6,31 @@
     padding: 2%;
     display: grid;
     grid-template-columns: 50%, 50%;
+    grid-template-rows: 100%, 100%;
     margin: 5%;
-    
 }
+
+.texttitle {
+    grid-column: 1 / span 2;
+    grid-row: 1;
+    text-align: center;
+   
+}
+
+
 
 .textbox1 {
     background-color: white;
     border: 2px solid black;
     box-shadow: 0 4px 8px black;
     text-align: center;
+    font-family: 'Playfair Display', sans-serif;
     color: black;
     width: 75%;
     padding: 2%;
     position: relative;
     grid-column: 1;
+    grid-row: 2;
     height: fit-content;
     overflow: hidden;
 }
@@ -31,6 +42,7 @@
     padding: 2%;
     position: relative;
     grid-column: 2;
+    grid-row: 2;
 }
     .imgbox1 img {
         width: 100%;
@@ -39,32 +51,161 @@
     }
 
 
+
+.containerbox2 {
+    padding: 5%;
+    display: grid;
+    grid-template-columns: 50%, 50%;
+    grid-template-rows: 100%, 100%;
+    margin: 5%;
+    margin-bottom: 10%;
+}
+
 .textbox2 {
+    margin-top: 7%;
     background-color: white;
-    border: 2px solid black;
     box-shadow: 0 4px 8px black;
     text-align: center;
+    font-family: 'Playfair Display', sans-serif;
     color: black;
-    width: 75%;
-    padding: 2%;
-    position: relative;
+    width: 35%;
+    position: absolute;
     grid-column: 2;
+    grid-row: 2;
     height: fit-content;
     overflow: hidden;
+    left: 57%;
 }
 
 .imgbox2 {
-    position: absolute;
+    position: relative;
     align-content: normal;
     color: black;
-    width: 100%;
-    padding: 2%;
+    width: 50%;
     position: relative;
     grid-column: 1;
+    grid-row: 2;
+    padding: 2%;
 }
 
-    .imgbox1 img {
+    .imgbox2 img {
         width: 100%;
         height: auto;
         box-shadow: 0 4px 8px black;
     }
+
+.imgback3 {
+    height: auto;
+    width: 100%;
+    background-image: url(couple.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    margin: 0%;
+}
+
+section {
+    display: flex;
+    justify-content: left;
+    position: relative;
+    grid-column: 1;
+    grid-row: 2;
+}
+
+iframe {
+    width: 100%;
+    height: auto;
+}
+
+@media (max-width: 600px) {
+    .containerbox1 {
+        padding: 2%;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 100%, 100%, 100%;
+    }
+
+    .texttitle {
+        grid-column: 1;
+        grid-row: 1;
+        text-align: center;
+    }
+
+
+
+    .textbox1 {
+        background-color: white;
+        border: 2px solid black;
+        box-shadow: 0 4px 8px black;
+        text-align: center;
+        font-family: 'Playfair Display', sans-serif;
+        color: black;
+        width: 75%;
+        padding: 2%;
+        position: relative;
+        grid-column: 1;
+        grid-row: 2;
+        height: fit-content;
+        overflow: hidden;
+    }
+
+    .imgbox1 {
+        position: absolute;
+        align-content: normal;
+        color: black;
+        width: 100%;
+        padding: 2%;
+        position: relative;
+        grid-column: 1;
+        grid-row: 3;
+    }
+
+        .imgbox1 img {
+            width: 100%;
+            height: auto;
+            box-shadow: 0 4px 8px black;
+        }
+
+    .containerbox2 {
+        padding: 2%;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 100%, 100%, 100%;
+        margin: 5%;
+    }
+
+ 
+    .textbox2 {
+        background-color: white;
+        border: 2px solid black;
+        box-shadow: 0 4px 8px black;
+        text-align: center;
+        font-family: 'Playfair Display', sans-serif;
+        color: black;
+        width: 75%;
+        padding: 2%;
+        position: relative;
+        grid-column: 1;
+        grid-row: 2;
+        height: fit-content;
+        overflow: hidden;
+    }
+
+    .imgbox2 {
+        position: absolute;
+        align-content: normal;
+        color: black;
+        width: 100%;
+        padding: 2%;
+        position: relative;
+        grid-column: 1;
+        grid-row: 3;
+    }
+
+        .imgbox2 img {
+            width: 100%;
+            height: auto;
+            box-shadow: 0 4px 8px black;
+        }
+   
+}
