process of fixing some issues with css

--- a/Asissgment1/contact.css
+++ b/Asissgment1/contact.css
@@ -47,8 +47,9 @@ input[type=submit] {
     height: 7%;
 }
 
-form image {
-    width: 100%;
+form img {
+    width: 20%;
     height: auto;
     margin-left: 30%;
+    position: absolute;
 }
