--- a/StyleSheet2.css
+++ b/StyleSheet2.css
@@ -2,6 +2,7 @@
 @import url('contact.css');
 
 body {
+    padding-top: 17%;
     margin: 0;
     overflow-x: hidden;
     background-color: #89CFF0;
@@ -58,12 +59,13 @@ h2 {
 }
 
 .navbutton {
-    border: none;
-    background-color: transparent;
+    border-color:aquamarine;
+    background-color: black;
     color: ghostwhite;
     font-family: 'Playfair Display', sans-serif;
     padding: 2rem 2rem;
-    height:20%;
+    width:100%;
+    height: 20%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -73,17 +75,24 @@ h2 {
 }
     button:hover {
         text-decoration: underline;
-        color:gray;
+        color:black;
+        background-color:whitesmoke
     }
 
 ul {
+    position:fixed;
+    z-index:1000;
+    top:0;
+    background-color: black;
     width: 100%;
+    height:35%;
     display: flex;
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding-top: 0%;
     overflow: visible;
-    box-shadow: 0 4px 8px white
+    box-shadow: 0 4px 8px white;
+    opacity: 0.95;
 }
 
 
@@ -130,6 +139,9 @@ ul li {
                     padding: 1rem 1rem;
                     font-size: 12px;
                     margin: 2% 1%;
+                }
+                ul {
+                    height:15%;
                 }
             }
 
