--- a/StyleSheet2.css
+++ b/StyleSheet2.css
@@ -122,8 +122,9 @@ ul li {
 
             @media (max-width: 1200px) {
                 ul li item {
-                    padding: 1.4rem 1.2rem;
+                    padding: 1rem 1.2rem;
                     font-size: medium;
+                    left: 15%;
                 }
 
                     ul li item img {
@@ -131,10 +132,11 @@ ul li {
                         margin-top: 3%;
                         width: 35%;
                         padding: 1.4rem 3.5rem;
+                        left: 5%;
                     }
             }
 
-            @media (max-width: 1200px) {
+            @media (max-width: 600px) {
                 .navbutton {
                     padding: 1rem 1rem;
                     font-size: 12px;
