--- a/StyleSheet3.css
+++ b/StyleSheet3.css
@@ -5,8 +5,8 @@
 .containerbox1 {
     padding: 2%;
     display: grid;
-    grid-template-columns: 50%, 50%;
-    grid-template-rows: 100%, 100%;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100% 100%;
     margin: 5%;
 }
 
@@ -55,8 +55,8 @@
 .containerbox2 {
     padding: 5%;
     display: grid;
-    grid-template-columns: 50%, 50%;
-    grid-template-rows: 100%, 100%;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100% 100%;
     margin: 5%;
     margin-bottom: 10%;
 }
@@ -122,7 +122,7 @@ iframe {
         padding: 2%;
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: 100%, 100%, 100%;
+        grid-template-rows: 100% 100% 100%;
     }
 
     .texttitle {
@@ -170,7 +170,7 @@ iframe {
         padding: 2%;
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: 100%, 100%, 100%;
+        grid-template-rows: 100% 100% 100%;
         margin: 5%;
     }
 
