--- a/contact.css
+++ b/contact.css
@@ -2,65 +2,66 @@ body
 {
 }
 
-
+.contactdiv {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 100%;
+}
 
 form {
+    grid-column: 2;
+    grid-row: 1;
     display: flex;
-    width: 45%;
+    width: 100%;
     padding: 20px;
     border-radius: 10px;
     margin: 0 auto;
     flex-direction: column;
-    box-shadow: 0 4px 8px;
     grid-column: 1;
     grid-row: 1;
 }
 input[type=text] {
     font-family: 'Libre Baskerville', Arial, serif;
-    background-color: lightgrey;
+    background-color: ghostwhite;
     border-width: 0px;
-    border:none;
-    width:50%;
-    height: 7%;
+    width: 100%;
+    height: 25%;
+    border: 5px solid black;
 }
 input[type=date] {
     font-family: 'Libre Baskerville', Arial, serif;
-    background-color: lightgrey;
+    background-color: ghostwhite;
     border-width: 0px;
-    border: none;
-    width: 50%;
-    height: 7%;
+    width: 100%;
+    height: 25%;
+    border: 5px solid black;
 }
 .asks {
     display: block;
     display: inline-block;
     font-family: 'Libre Baskerville', Arial, serif;
-    background-color: lightgrey;
+    background-color: ghostwhite;
     border-width: 0px;
-    border: none;
-    width: 50%;
+    border: 5px solid black;
     line-height: 120%;
-    
 }
 input[type=submit] {
     font-family: 'Libre Baskerville', Arial, serif;
-    background-color: lightgrey;
+    background-color: ghostwhite;
     border-width: 0px;
-    border: none;
-    width: 50%;
-    height: 7%;
+    border: 5px solid black;
+    width: 100%;
+    height: 25%;
 }
 
-form img {
-    width: 20%;
-    height: auto;
-    position: absolute;
-    left: 52%;
+label {
+    color: ghostwhite;
+    font-family: 'Libre Baskerville', Arial, serif;
 }
 
 @media(max-width: 600px) {
     form {
-        width:65%;
+        width:100%;
         display: flex;
         padding: 20px;
         border-radius: 10px;
@@ -69,10 +70,5 @@ form img {
         grid-row: 1;
         box-shadow: 0 4px 8px;
     }
-        form img {
-            width: 30%;
-            height: auto;
-            position: absolute;
-            left: 49%;
-        }
+       
 }
