complelty had to redo the about me page becuase it decided to implode on itself or something, i genunily dont know what happend, it was to do with the row sizes but worked fine until today so had to redo it to make it safer

--- a/contact.css
+++ b/contact.css
@@ -2,23 +2,44 @@ body
 {
 }
 
-.contactdiv {
+.containerbox11 {
+    align-content: start;
+    padding: 2%;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 100%;
+    grid-template-rows: 10% 90%;
+    margin: 5%;
+    border: 5px solid green;
+}
+
+.lil {
+    border-radius: 25%;
+    background-color: red;
+    width: 100%; 
+}
+
+.rdiv {
+    width: 85%;
+    grid-column: 2;
+    grid-row: 1 / span 2;
+    border: 5px solid green;
+    align-content: center;
 }
 
 form {
-    grid-column: 2;
+    z-index: 20;
+    border: 5px solid red;
+    grid-column: 1;
     grid-row: 1;
     display: flex;
-    width: 100%;
+    width: 85%;
     padding: 20px;
     border-radius: 10px;
     margin: 0 auto;
     flex-direction: column;
     grid-column: 1;
-    grid-row: 1;
+    grid-row: 1 / span 2;
+
 }
 input[type=text] {
     font-family: 'Libre Baskerville', Arial, serif;
