--- a/StyleSheet3.css
+++ b/StyleSheet3.css
@@ -3,11 +3,13 @@
 }
 
 .containerbox1 {
+    align-content:start;
     padding: 2%;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 100% 100%;
+    grid-template-rows: 10% 90%;
     margin: 5%;
+    border: 5px solid green;
 }
 
 .texttitle {
@@ -33,9 +35,9 @@
     grid-row: 2;
     height: fit-content;
     overflow: hidden;
+    border: 5px solid blue;
 }
 .imgbox1 {
-    position: absolute;
     align-content: normal;
     color: black;
     width: 100%;
@@ -45,50 +47,6 @@
     grid-row: 2;
 }
     .imgbox1 img {
-        width: 100%;
-        height: auto;
-        box-shadow: 0 4px 8px black;
-    }
-
-
-
-.containerbox2 {
-    padding: 5%;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 100% 100%;
-    margin: 5%;
-    margin-bottom: 10%;
-}
-
-.textbox2 {
-    margin-top: 7%;
-    background-color: white;
-    box-shadow: 0 4px 8px black;
-    text-align: center;
-    font-family: 'Playfair Display', sans-serif;
-    color: black;
-    width: 35%;
-    position: absolute;
-    grid-column: 2;
-    grid-row: 2;
-    height: fit-content;
-    overflow: hidden;
-    left: 57%;
-}
-
-.imgbox2 {
-    position: relative;
-    align-content: normal;
-    color: black;
-    width: 50%;
-    position: relative;
-    grid-column: 1;
-    grid-row: 2;
-    padding: 2%;
-}
-
-    .imgbox2 img {
         width: 100%;
         height: auto;
         box-shadow: 0 4px 8px black;
@@ -122,7 +80,8 @@ iframe {
         padding: 2%;
         display: grid;
         grid-template-columns: 100%;
-        grid-template-rows: 100% 100% 100%;
+        grid-template-rows: 10% 62% 18%;
+        grid-row-gap: normal;
     }
 
     .texttitle {
@@ -150,14 +109,13 @@ iframe {
     }
 
     .imgbox1 {
-        position: absolute;
         align-content: normal;
         color: black;
         width: 100%;
         padding: 2%;
-        position: relative;
         grid-column: 1;
         grid-row: 3;
+       
     }
 
         .imgbox1 img {
@@ -165,48 +123,4 @@ iframe {
             height: auto;
             box-shadow: 0 4px 8px black;
         }
-
-    .containerbox2 {
-        padding: 2%;
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 100% 100% 100%;
-        margin: 5%;
-    }
-
-
-    .textbox2 {
-        background-color: white;
-        border: 2px solid black;
-        box-shadow: 0 4px 8px black;
-        text-align: center;
-        font-family: 'Playfair Display', sans-serif;
-        color: black;
-        width: 75%;
-        padding: 2%;
-        position: relative;
-        grid-column: 1;
-        grid-row: 2;
-        height: fit-content;
-        overflow: hidden;
-        left: 25%;
-    }
-
-    .imgbox2 {
-        position: absolute;
-        align-content: normal;
-        color: black;
-        width: 100%;
-        padding: 2%;
-        position: relative;
-        grid-column: 1;
-        grid-row: 3;
-    }
-
-        .imgbox2 img {
-            width: 100%;
-            height: auto;
-            box-shadow: 0 4px 8px black;
-        }
-   
 }
