--- a/contact.css
+++ b/contact.css
@@ -80,7 +80,7 @@ label {
 .textforcon {
     left:20%;
     margin:5%;
-    background-color: white;
+    background-color: ghostwhite;
     border: 2px solid black;
     box-shadow: 0 4px 8px black;
     text-align: center;
