--- a/root/StyleSheet2.css
+++ b/root/StyleSheet2.css
@@ -30,7 +30,7 @@ body {
 
 h1 {
     font-family: 'Playfair Display', sans-serif;
-    color: white;
+    color: darkgoldenrod;
     text-align: center;
     
 }
@@ -41,9 +41,8 @@ p {
 
 h2 {
     font-family: 'Playfair Display', sans-serif;
-    color: white;
+    color: darkgoldenrod;
     text-align: center;
-    
 }
 .left {
     float: left;
